--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 
     <nav> <!--menu-->
       <a href=""> Denúncias </a>
-      <a href=""> áreas de risco </a>
+      <a href=""> Áreas de risco </a>
       <a href=""> Pontos de doações </a>
       <a href=""> Notícias </a>
       <a href=""> Quem somos? </a>
@@ -64,8 +64,11 @@ function mudarCorDeFundo() {
   </div>
 
   <footer>
+    <a href="https://instagram.com/dizalaga?igshid=OGQ5ZDc2ODk2ZA=="><div class="instagram" >
+      <img src="/imagens/instagram.png" width="25px" height="30px">
+      <p> @DizAlaga</p>
+    </div></a>
     
   </footer>
 </body>
-
 </html>
