--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
     </div>
 
 
-    
+
 
     <script>
       var isBlack = false;
 
-function mudarCorDeFundo() {
-    if (isBlack) {
-        document.body.style.backgroundColor = "white";
-        isBlack = false;
-    } else {
-        document.body.style.backgroundColor = "black";
-        isBlack = true;
-    }
-}
+      function mudarCorDeFundo() {
+        if (isBlack) {
+          document.body.style.backgroundColor = "white";
+          isBlack = false;
+        } else {
+          document.body.style.backgroundColor = "black";
+          isBlack = true;
+        }
+      }
     </script>
 
     <div class="body-clima">
@@ -63,11 +63,18 @@ function mudarCorDeFundo() {
   </div>
 
   <footer>
-    <a href="https://instagram.com/dizalaga?igshid=OGQ5ZDc2ODk2ZA=="><div class="instagram" >
-      <img src="/imagens/instagram.png" width="25px" height="30px">
-      <p> @DizAlaga</p>
-    </div></a>
-    
+    <a href="https://instagram.com/dizalaga?igshid=OGQ5ZDc2ODk2ZA==">
+      <div class="instagram">
+        <img src="/imagens/instagram.png" width="25px" height="25px">
+        <p> @DizAlaga</p>
+      </div>
+    </a>
+    <div class="instagram">
+      <img src="/imagens/email.png" width="30px" height="30px">
+      <p> dizalaga@gmail.com</p>
+    </div>
+
   </footer>
 </body>
+
 </html>
