--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
             <a href=""> Áreas de risco </a>
             <a href=""> Pontos de doações </a>
             <a href=""> Marketplace </a>
-            <a href=""> Quem somos? </a>
+            <a href="sobre.html"> Quem somos? </a>
 
             <a href=""><img src="/imagens/user.png" width="50px" class="user"></a>
         </nav>
