--- a/sobre.html
+++ b/sobre.html
@@ -44,29 +44,29 @@
                     mais
                     rápido aos pontos que precisam de atenção.</p>
             </div>
-            <div>
-                <img src="imagens/user.png">
+            <div class="fotoGrupo">
+                <img src="imagens/foto grupo.jpg" >
             </div>
         </div>
     </div>
     <div class="timejunto">
         <h1>Equipe</h1>
         <div class="time">
-            <div class="fotoTime"><img src="imagens/instagram.png" width="100px">
+            <div class="fotoTime"><img src="imagens/ESTER.jpg">
                 <p>Ester Reis
                 <p>Lider do projeto</p>
             </div>
-            <div class="fotoTime"><img src="imagens/instagram.png" width="100px">
+            <div class="fotoTime"><img src="imagens/GABRIEL.jpg">
                 <p>Gabriel Aguiar
                 <p>Fullstack</p>
                 </p>
             </div>
-            <div class="fotoTime"><img src="imagens/instagram.png" width="100px">
+            <div class="fotoTime"><img src="imagens/ARTHUR.jpg">
                 <p>Arthur Vinicius
                 <p>Back-end</p>
                 </p>
             </div>
-            <div class="fotoTime"><img src="imagens/instagram.png" width="100px">
+            <div class="fotoTime"><img src="imagens/LUIZ.jpg">
                 <p>Luiz Neto
                 <p>Banco de dados</p>
                 </p>
@@ -75,17 +75,17 @@
 
         <div class="time">
 
-            <div class="fotoTime"><img src="imagens/instagram.png" width="100px">
+            <div class="fotoTime"><img src="imagens/LAURA.jpg">
                 <p>Laura Leite
                 <p>Front-end</p>
                 </p>
             </div>
-            <div class="fotoTime"><img src="imagens/instagram.png" width="100px">
+            <div class="fotoTime"><img src="imagens/THAIS.jpg" width="100px">
                 <p>Thais Victoria
                 <p>Front-end</p>
                 </p>
             </div>
-            <div class="fotoTime"><img src="imagens/instagram.png" width="100px">
+            <div class="fotoTime"><img src="imagens/KUSUKI.jpg" width="100px">
                 <p>Victoria Kusuki
                 <p>Front-end</p>
                 </p>
@@ -97,11 +97,11 @@
         <h3>Parceiros</h3>
         <div class="parceiros">
 
-            <div class="fotoTime"><img src="imagens/logo proa.jpeg" width="100px" height="120px">
+            <div class="fotoParceiros"><img src="imagens/logo proa.jpeg" width="100px" height="120px">
             </div>
-            <div class="fotoTime"><img src="imagens/logo defesa civil.jpeg" width="100px" height="120px">
+            <div class="fotoParceiros"><img src="imagens/logo defesa civil.jpeg" width="100px" height="120px">
             </div>
-            <div class="fotoTime"><img src="imagens/logo senac.jpeg" width="100px" height="120px">
+            <div class="fotoParceiros"><img src="imagens/logo senac.jpeg" width="100px" height="120px">
             </div>
         </div>
     </div>
